# buderus-wps-ha

./: .gitignore  .pre-commit-config.yaml  BUGS.md  CLAUDE.md  DEVELOPMENT.md  DHW_TEMP_BUG_REPORT.md  DHW_TEMP_FIX_SUMMARY.md  DIAGNOSTIC_INSTRUCTIONS.md  DIAGNOSTIC_STEPS.md  DOCS.md  Dockerfile  IMPORTANT_HACS_DEPLOYMENT.md  PARAMETER_LOOKUP_DECISION_SUMMARY.md  PARAMETER_LOOKUP_VISUAL_COMPARISON.md  README.md  RELEASE_CHECKLIST.md  RESEARCH_PARAMETER_LOOKUP_OPTIMIZATION.md  TESTING_SESSION_2025-12-16.md  autoverify.py  benchmark_lookup.py  build.yaml  check_compressor.py  check_gt_temps.py  config.yaml  debug_dhw_broadcasts.py  devcontainer_bootstrap  diagnose_brine_temps.py  diagnose_final.py  diagnose_standalone.py  diagnose_v2.py  evusniffer.py  find_dhw_temp.py  hacs.json  monitor_compressor.py  parameter_dump.json  pyproject.toml  pytest.ini  quick_test.py  rootfs  run_diagnostic.sh  (+5 more)
.devcontainer/: HA_E2E_TESTING.md  devcontainer.json  devcontainer_bootstrap.sh  post-start.sh  setup.sh
.devcontainer/config/: .gitignore  configuration.yaml
.devcontainer/ssh/: id_ed25519.pub
.github/workflows/: quality.yml
.specify/memory/: constitution.md
addon/: CHANGELOG.md  DOCS.md  Dockerfile  build.yaml  config.yaml
addon/buderus_wps/: HOME_ASSISTANT.md  broadcast_monitor.py  energy_blocking.py  enums.py  parameter_data.py  parameter_defaults.py
addon/buderus_wps_addon/: __init__.py  command_queue.py  config.py  entity_config.py  main.py  mqtt_bridge.py
addon/buderus_wps_cli/: __init__.py
addon/translations/: en.yaml
buderus_wps/: __init__.py  broadcast_monitor.py  can_adapter.py  can_message.py  config.py  discovery.py  element_discovery.py  exceptions.py  formats.py  heat_pump.py  menu_api.py  menu_structure.py  parameter.py  parameter_data.py  parameter_defaults.py  parameter_registry.py  program_switching.py  schedule_codec.py  value_encoder.py
buderus_wps_cli/: __init__.py  main.py
buderus_wps_cli/tui/: app.py  state.py
custom_components/buderus_wps/: __init__.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  diagnose_brine_temps.py  entity.py  manifest.json  number.py  select.py  sensor.py  services.yaml  switch.py
data/: history (2).csv
docs/: PROTOCOL.md  compressor-detection.md  installation-config.md
docs/gebruikershandleiding/: 6720800793.html  6720800793_ind.html  6720800793s.html
docs/installatiehandleiding/: Installatiehandleiding Logatherm.html  Installatiehandleiding Logatherm_ind.html  Installatiehandleiding Logatherms.html
fhem/: 26_KM273v018.pm
fhem/fhem-capture/: capture-20251224-165038.hex  capture-20251224-165740.hex
scripts/: build-release.sh  check-quality.sh  deploy-beta.sh  diagnose_dhw.py  ha-restart.sh  scan_gt3_range.py  test-all.sh  test-ha.sh  test-hil.sh  test_can.py  test_discovery.py  test_gt3_temp.py
specs/001-can-usb-serial/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-buderus-wps-python-class/: data-model.md  plan.md  protocol-broadcast-mapping.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-program-switching-control/: spec.md
specs/004-perl-config-parser/: spec.md
specs/005-can-parameter-access/: data-model.md  plan.md  quickstart.md  research.md  research_parameter_lookup.md  spec.md
specs/006-buderus-wps-cli/: spec.md
specs/007-heatpump-menu-api/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/008-terminal-menu-ui/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/009-sensor-config/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/010-energy-blocking-control/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/011-ha-integration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/012-broadcast-read-fallback/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/013-ha-supervisor-addon/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/014-hacs-publishing/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/015-usb-connection-switch/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/016-indefinite-caching-implementation/: plan.md  spec.md  tasks.md
specs/017-dhw-setpoint-temp/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/017-mock-can-testing/: data-model.md  quickstart.md  research.md  spec.md
specs/018-element-discovery/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
tests/: conftest.py
tests/acceptance/: test_acceptance_us0.py  test_acceptance_us4.py  test_broadcast_read_acceptance.py  test_ha_us1_temperature.py  test_ha_us2_compressor.py  test_ha_us3_energy_block.py  test_ha_us4_dhw_extra.py  test_user_stories.py
tests/contract/: can_ids.py  test_acceptance_us1.py  test_acceptance_us2.py  test_acceptance_us3.py  test_addon_config_yaml.py  test_addon_mqtt_discovery.py  test_binary_parsing.py  test_broadcast_read_contract.py  test_can_id_formulas.py  test_energy_blocking_contract.py  test_parameter_fidelity.py  test_schedule_encoding.py  test_usbtin_protocol.py
tests/hil/: __init__.py  debug_all_traffic.py  debug_can_all_matches.py  debug_can_data_request.py  debug_can_read.py  debug_decode_broadcasts.py  debug_element_list.py  debug_multiple_params.py  debug_multiple_requests.py  debug_wait_for_data.py  debug_write_test.py  test_cli_read_write.py  test_cross_validation.py  test_passive_monitoring.py
tests/integration/: test_addon_install.py  test_broadcast_read.py  test_cache_flow.py  test_can_adapter_mock.py  test_control_entities.py  test_coordinator_manual_disconnect.py  test_discovery_flow.py  test_energy_blocking_integration.py  test_ha_compressor.py  test_ha_dhw_extra.py  test_ha_energy_block.py  test_ha_import_smoke.py  test_ha_reconnection.py  (+6 more)
tools/: debug_can.py  generate_parameter_defaults.py  scan_parameters.py  test_element_discovery.py  test_simple_read.py  verify_fhem.py  verify_fhem_v2.py
(+117 files in other folders)
